--- a/LWC_Chat_GPT.html
+++ b/LWC_Chat_GPT.html
@@ -1,5 +1,5 @@
 <template>
-<lightning-card title="ChatGPTTest">
+<lightning-card title="ChatGPTIntegration">
     <lightning-layout>
         <lightning-layout-item size="12">
             <label for="prompt">Enter your prompt:</label>
